--- a/TODO
+++ b/TODO
@@ -1,34 +1,1 @@
-std::pair<pointer, bool> insert(const value_type &val)
-            {
-                pointer newNode;
-                std::pair<pointer, bool> res = find(val);
-
-                if (res.second)
-                    return res;
-                newNode = _alloc.allocate(1);
-                _alloc.construct(newNode, node(val));
-                if (_size)
-                {
-                    newNode->_parent = res.first;
-                    if(_comp(val.first, res.first->_data.first))
-                    {
-                        if (res.first == _begin)
-                            _begin = newNode;
-                        res.first->_left = newNode;
-                    }
-                    else
-                    {
-                        if (res.first->_right == _end)
-                            _end->_parent = newNode;
-                        res.first->_right = newNode;
-                    }
-                }
-                else
-                {
-                    _head = _begin = newNode;
-                    _end->_parent = _head;
-                }
-                _size++;
-                res.first = newNode;
-                return res;
-            }
+-fix iterator
